# 3d-renderer

./: 3dRenderer.cpp  3dRenderer.cpp~RF14c34c10.TMP  build.bat  buildRun.bat  installMinGW.bat  main.cpp  package-lock.json  readme.md
cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  build.bat  cmake_install.cmake  setup.bat
src/: main.cpp
